[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[dependencies]
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
pki-types = { package = "rustls-pki-types", version = "0.2" }
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
rustls = { path = "../rustls", features = [ "logging" ]}
rustls-pemfile = "=2.0.0-alpha.1"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "=0.26.0-alpha.1"
rand_core = { version = "0.6.0", features = ["getrandom"] }
pkcs8 = { version = "0.10.2" }
rsa = { version = "0.9.0", features = ["sha2"], default-features = false }
sha2 = { version = "0.10.0", default-features = false }
signature = "2"
der = "0.7.0"
webpki = { package = "rustls-webpki", version = "=0.102.0-alpha.6", features = [
    "alloc",
], default-features = false }
chacha20poly1305 = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
x25519-dalek = "2"
p256 = { version = "0.13.2", default-features = false, features = [
    "alloc",
    "ecdsa",
    "pkcs8",
] }
hmac = "0.12.0"